# pyswift-backends

./: backend_template.yml  pyproject.toml
.github/workflows/: validate-schemas.yml
src/kivyschool/: standard_backend.py
src/kivyschool/admob4kivy/: __init__.py  backend.yml
src/kivyschool/kivy3launcher/: __init__.py  backend.yml  site_packages_install.py
src/kivyschool/kivylauncher/: __init__.py  backend.yml  main_swift.py
src/kivyschool/reloader/: __init__.py
src/kivyschool/sdl2/: __init__.py  backend.yml  install.py
src/kivyschool/sdl3/: __init__.py  backend.yml  install.py
