[project]
name = "kivyschool"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PythonSwiftLink", email = "107263226+PythonSwiftLink@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pip>=25.2",
    "requests>=2.32.4",
    "sh>=2.2.2",
    "toml>=0.10.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
backend-tools = { git = "https://github.com/Py-Swift/PSBackend" }

[dependency-groups]
dev = [
    "backend-tools",
    "pip>=25.2",
]
